<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="#184864"
    tools:context="com.example.bintu.cinefreak.SignUpActivity">

    <EditText android:id="@+id/name"
        android:layout_width="400dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:hint="@string/name" />

    <EditText android:id="@+id/SignId"
        android:layout_width="400dp"
        android:layout_marginTop="90dp"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:hint="@string/SignId" />
    <EditText
        android:id="@+id/SignPass"
        android:layout_width="400dp"
        android:layout_marginTop="160dp"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:inputType="textPassword"

        android:hint="@string/SignPass" />
    <EditText
        android:id="@+id/Repass"
        android:layout_width="400dp"
        android:layout_marginTop="230dp"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:hint="@string/RePass"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/wrongpass"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:background="#184864"
        android:layout_gravity="center_horizontal|center"
        />
    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:onClick="onClick"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        />

</RelativeLayout>
