<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="com.example.bintu.cinefreak.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="CINEFREAK"
        android:textStyle="bold"
        android:textSize="40sp"
        />

    <EditText android:id="@+id/login_id"
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:background="#ffff"
        android:hint="@string/loginId" />
    <EditText android:id="@+id/login_pass"
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:hint="@string/loginPass"
        android:background="#ffff"
        android:inputType="textPassword"/>
    <Button android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="onLoginClick"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        />
    <Button  android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:onClick="onSignupclick"
        android:layout_marginTop="430dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        />



</RelativeLayout>
